<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <com.lary.health.ui.widget.HomeViewPager
        android:id="@+id/music_view_pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="1dp" >

            <RadioButton
                android:id="@+id/btn_five_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/tab_music_five"
                android:gravity="center_horizontal"
                android:text="@string/first_music_name"
                android:textColor="@drawable/music_color_selector"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/btn_condition_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/tab_music_condition"
                android:gravity="center_horizontal"
                android:text="@string/second_music_name"
                android:textColor="@drawable/music_color_selector"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/btn_original_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/tab_music_orginal"
                android:gravity="center_horizontal"
                android:text="@string/third_music_name"
                android:textColor="@drawable/music_color_selector"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/btn_make_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/tab_music_make"
                android:gravity="center_horizontal"
                android:text="@string/four_music_name"
                android:textColor="@drawable/music_color_selector"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/btn_prescription_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null" 
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/tab_music_precteption"
                android:gravity="center_horizontal"
                android:text="@string/five_music_name"
                android:textColor="@drawable/music_color_selector"
                android:textSize="13sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>