<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity" >

    <com.lary.health.ui.widget.HomeViewPager
        android:id="@+id/view_pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:layout_weight="0.1">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="1dp" >
            
            <RadioButton
                android:id="@+id/btn_home"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/first_name" 
                android:drawableTop="@drawable/tab_selector_home"
                android:textColor="@drawable/color_selector"
                android:textSize="13sp"
                android:drawablePadding="5dp"/>

            <RadioButton
                android:id="@+id/btn_circle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/third_name" 
                android:drawableTop="@drawable/tab_selector_faxain"
                android:textColor="@drawable/color_selector"
                android:drawablePadding="5dp"
                android:textSize="13sp"/>

            <RadioButton
                android:id="@+id/btn_shop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/four_name"
                android:drawableTop="@drawable/tab_selector_circle" 
                android:textColor="@drawable/color_selector"
                android:drawablePadding="5dp"
                android:textSize="13sp"/>

            <RadioButton
                android:id="@+id/btn_persion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/five_name" 
                android:drawableTop="@drawable/tab_selector_persion"
                android:textColor="@drawable/color_selector"
                android:drawablePadding="5dp"
                android:textSize="13sp"
                />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>