<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/title"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/tv_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/register_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" >

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/star"
                        android:text="昵称：" />

                    <EditText
                        android:id="@+id/nickname_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入您的昵称"
                        android:padding="5dp"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/star"
                        android:text="@string/register_email" />

                    <EditText
                        android:id="@+id/email_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入您的邮箱"
                        android:padding="5dp"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/star"
                        android:text="@string/register_pwd" />

                    <EditText
                        android:id="@+id/pwd_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入密码"
                        android:padding="5dp"
                        android:password="true"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/star"
                        android:text="@string/register_repwd" />

                    <EditText
                        android:id="@+id/repwd_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请再次输入密码"
                        android:padding="5dp"
                        android:password="true"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_qq" />

                    <EditText
                        android:id="@+id/qq_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入QQ号码"
                        android:padding="5dp"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_phone" />

                    <EditText
                        android:id="@+id/phones_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入电话"
                        android:padding="5dp"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_address" />

                    <EditText
                        android:id="@+id/address_ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="请输入地址"
                        android:padding="5dp"
                        android:textSize="16sp" />
                </TableRow>

                <Button
                    android:id="@+id/register_bt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:text="确定"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>